--- a/app/views/media/edit.html.erb
+++ b/app/views/media/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Media#edit</h1>
-<p>Find me in app/views/media/edit.html.erb</p>
+<h1>Edit <%=@my_medium.name%></h1>
+
+<%= render partial: 'medium_form' %>
