--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header class='set-header'>
+	<a class='set-header' href="/">
+		<img src="http://img03.deviantart.net/0fa8/i/2014/038/b/f/totorotchu_and_pikaro_by_barnett-d75h0yv.png">
+		
+	</a>
+	<div>
+			<h1>Pikatoro and Totorochu's Media Picks</h1>
+		</div>	
 
+
+
+	</header>
+	
 <%= yield %>
 
 </body>
