added conditional buttons to view

--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -6,6 +6,28 @@
 
 <p><%= button_to("Upvote", upvote_media_path(@my_medium.id)) %></p>
 <p><%= button_to("Downvote", downvote_media_path(@my_medium.id)) %></p>
-<p><%= button_to("Edit Medium", edit_media_path(@my_medium.id), method: :get) %></p>
-<p><%= button_to("Delete Medium", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></p>
+
+<!-- edit buttons -->
+<% if medium.kind == 'album' %>
+	<p><%= button_to("Edit Medium", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>
+<% elsif %>
+	<% medium.kind == 'book' %>
+	<p><%= button_to("Edit Book", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>			
+<%else %>
+	<% medium.kind == 'movie' %>
+	<p><%= button_to("Edit Movie", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>	
+<% end %>
+
+
+<!-- delete buttons -->
+<% if medium.kind == 'album' %>		
+<p><%= button_to("Delete Album", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></p>
+<% elsif %>
+	<% medium.kind == 'book' %>
+<p><%= button_to("Delete Book", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %></p>
+<%else %>
+	<% medium.kind == 'movie' %>						
+<p><%= button_to("Delete Movie", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful example of cinematography?"}) %></p>
+<% end %>
+
 
