--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -21,7 +21,7 @@
 		<p><%= button_to("Downvote", downvote_media_path(medium.id)) %></p>
 <!-- edit buttons -->
 		<% if medium.kind == 'album' %>
-			<p><%= button_to("Edit Medium", edit_media_path(medium.id), method: :get, action: :edit) %></p>
+			<p><%= button_to("Edit Album", edit_media_path(medium.id), method: :get, action: :edit) %></p>
 		<% elsif %>
 			<% medium.kind == 'book' %>
 			<p><%= button_to("Edit Book", edit_media_path(medium.id), method: :get, action: :edit) %></p>			
