--- a/app/views/media/_media_form.html.erb
+++ b/app/views/media/_media_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @my_medium, 
 method: @post_method, 
 url: @post_path do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
+	<%= f.label :title %>
+	<%= f.text_field :title %>
 
 	<%= f.label :maker %>
 	<%= f.text_field :maker %>
