--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -4,30 +4,30 @@
 <p>Maker: <%= @my_medium.maker %></p>
 <p>Description: <%= @my_medium.description %></p>
 
-<p><%= button_to("Upvote", upvote_medium_path(@my_medium.id)) %></p>
-<p><%= button_to("Downvote", downvote_medium_path(@my_medium.id)) %></p>
+<p><%= button_to("Upvote", upvote_media_path(@my_medium.id)) %></p>
+<p><%= button_to("Downvote", downvote_media_path(@my_medium.id)) %></p>
 
 <!-- edit buttons -->
-<% if medium.kind == 'album' %>
-	<p><%= button_to("Edit Medium", edit_medium_path(@my_medium.id), method: :get, action: :edit) %></p>
+<% if @my_medium.kind == 'album' %>
+	<p><%= button_to("Edit Medium", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>
 <% elsif %>
-	<% medium.kind == 'book' %>
-	<p><%= button_to("Edit Book", edit_medium_path(@my_medium.id), method: :get, action: :edit) %></p>			
+	<% @my_medium.kind == 'book' %>
+	<p><%= button_to("Edit Book", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>			
 <%else %>
-	<% medium.kind == 'movie' %>
-	<p><%= button_to("Edit Movie", edit_medium_path(@my_medium.id), method: :get, action: :edit) %></p>	
+	<% @my_medium.kind == 'movie' %>
+	<p><%= button_to("Edit Movie", edit_media_path(@my_medium.id), method: :get, action: :edit) %></p>	
 <% end %>
 
 
 <!-- delete buttons -->
-<% if medium.kind == 'album' %>		
-<p><%= button_to("Delete Album", delete_medium_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></p>
+<% if @my_medium.kind == 'album' %>		
+<p><%= button_to("Delete Album", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></p>
 <% elsif %>
-	<% medium.kind == 'book' %>
-<p><%= button_to("Delete Book", delete_medium_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %></p>
+	<% @my_medium.kind == 'book' %>
+<p><%= button_to("Delete Book", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %></p>
 <%else %>
-	<% medium.kind == 'movie' %>						
-<p><%= button_to("Delete Movie", delete_medium_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful example of cinematography?"}) %></p>
+	<% @my_medium.kind == 'movie' %>						
+<p><%= button_to("Delete Movie", delete_media_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful example of cinematography?"}) %></p>
 <% end %>
 
 
