changed styling and header language, added foundation styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,23 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+    <link rel="stylesheet" href="stylesheets/foundation.css">
+    <link rel="stylesheet" href="stylesheets/application.css">
 </head>
 <body>
-	<header class='set-header'>
-	<a class='set-header' href="/">
-		<img src="http://img03.deviantart.net/0fa8/i/2014/038/b/f/totorotchu_and_pikaro_by_barnett-d75h0yv.png">
-		
-	</a>
-	<div>
-			<h1>Pikatoro and Totorochu's Media Picks</h1>
-		</div>	
-
-
+	<header>
+		<nav>
+    	<ul class="row small-up-1 medium-up-2">
+      	<li class="column">
+        	<a href="/">
+					<img src="http://img03.deviantart.net/0fa8/i/2014/038/b/f/totorotchu_and_pikaro_by_barnett-d75h0yv.png">
+					</a>
+				</li>
+				<li class="column">
+					<h1>Pikatoro and Totorochu's Favorite Favs</h1>
+				</li>
+			</ul>
+		</nav>
 
 	</header>
 	
