took out description, added foundation styling, moved add new button to bottom

--- a/app/views/media/_show_albums.html.erb
+++ b/app/views/media/_show_albums.html.erb
@@ -1,25 +1,39 @@
-<!-- code for it is     show_albums
-    @albums = @albums.sort_by { |medium| medium.votes.size }.reverse
+<span class="column">
 
- -->
-<h1>Albums!</h1>
 
-	<% @albums.each do |album| %>
-	<article>
-		<p>Ranking: <%= album.votes.count %> </p>
-		<p>Title: <%= link_to(album.title, show_media_path(album.id)) %></p>
+	<div class="row">
+		<header class="column">
+		<h1>Albums!</h1>
+		</header>
+		<% @albums.each do |album| %>
 
-		<p>Artist: <%=album.maker %></p>
-		<p>Description: <%= album.description %></p>
-
-		<p><%= button_to("Upvote", upvote_media_path(album.id)) %></p>
-		<p><%= button_to("Downvote", downvote_media_path(album.id)) %></p>
+			<article class="column">
+				<div class="card">
+<!-- item info -->
+					<p>Ranking: <%= album.votes.count %> </p>
+					<p><%= link_to(album.title, show_media_path(album.id)) %></p>
+					<p>By: <%=album.maker %></p>
+					<!-- <p>Description: <%= album.description %></p> -->
+<!-- voting buttons				 -->
+					<ul class="row small-up-1 medium-up-2">
+						<li class="column">
+							<%= button_to("Upvote", upvote_media_path(album.id)) %>
+						</li>
+						<li class="column">
+							<%= button_to("Downvote", downvote_media_path(album.id)) %>
+						</li>
 <!-- edit button -->
-		<p><%= button_to("Edit Album", edit_media_path(album.id), method: :get, action: :edit) %></p>	
-
+						<li class="column">
+							<%= button_to("Edit", edit_media_path(album.id), method: :get, action: :edit) %>
+						</li>	
 <!-- delete buttons -->	
-		<p><%= button_to("Delete Album", delete_media_path(album.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></p>
-
-
-	</article>
-	<% end %>
+						<li class="column">
+							<%= button_to("Delete", delete_media_path(album.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+						</li>
+					</ul>
+				</div>
+			</article>
+		<% end %>
+	</div>
+	<%= button_to("New Album", media_new_path, action: :get) %>
+</span>
