added foundation styling

--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -1,5 +1,9 @@
-<%= render partial: 'show_albums' %>
 
-<%= render partial: 'show_books' %>
+<span class="row small-up-1 medium-up-3">
+	
+	<%= render partial: 'show_albums' %>
 
-<%= render partial: 'show_movies' %>
+	<%= render partial: 'show_books' %>
+
+	<%= render partial: 'show_movies' %>
+</span>
