replaced url image with image in asset folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="stylesheets/application.css">
 </head>
 <body>
-	<header>
+	<header class="set-header">
 		<nav>
     	<ul class="row small-up-1 medium-up-2">
       	<li class="column">
         	<a href="/">
-					<img src="http://img03.deviantart.net/0fa8/i/2014/038/b/f/totorotchu_and_pikaro_by_barnett-d75h0yv.png">
+					<img src="/assets/totorochu_pikatoro.png" class="set-header">
 					</a>
 				</li>
 				<li class="column">
-					<h1>Pikatoro and Totorochu's Favorite Favs</h1>
+					<h1 class="set-header">Pikatoro and Totorochu's Favorite Favs</h1>
 				</li>
 			</ul>
 		</nav>
