changed routing names, 'ranking' to 'rank', added link

--- a/app/views/media/_show_books.html.erb
+++ b/app/views/media/_show_books.html.erb
@@ -1,29 +1,41 @@
 <span class="column">
-	<h1>Books!</h1>
+
 	<div class="row">
+		<header class="column">
+			<a href="/books"><h1>Books!</h1></a>
+		</header>
+
 		<% @books.each do |book| %>
+
 			<article class="column">
 	       <div class="card">
-					<p>Ranking: <%= book.votes.count %> </p>
-					<p><%= link_to(book.title, show_media_path(book.id)) %></p>
-
-					<p>By: <%=book.maker %></p>
-		<!-- <p>Description: <%= book.description %></p> -->
+	       	<ul>
+						<li>
+							Rank: <%= book.votes.count %> 
+						</li>
+						<li>
+							<%= link_to(book.title, show_path(book.id)) %>
+						</li>
+						<li>
+						By: <%=book.maker %>
+						</li>
+			<!-- <li>Description: <%= book.description %></li> -->
 <!-- voting buttons				 -->
+					</ul>
 					<ul class="row small-up-1 medium-up-2">
 						<li class="column">
-							<%= button_to("Upvote", upvote_media_path(book.id)) %>
+							<%= button_to("Upvote", upvote_path(book.id)) %>
 						</li>
 						<li class="column">
-							<%= button_to("Downvote", downvote_media_path(book.id)) %>
+							<%= button_to("Downvote", downvote_path(book.id)) %>
 						</li>
 <!-- edit button -->
 						<li class="column">
-							<%= button_to("Edit", edit_media_path(book.id), method: :get, action: :edit) %>
+							<%= button_to("Edit", edit_path(book.id), method: :get, action: :edit) %>
 						</li>	
 <!-- delete buttons -->	
 						<li class="column">
-							<%= button_to("Delete", delete_media_path(book.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+							<%= button_to("Delete", delete_path(book.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %>
 						</li>
 					</ul>
 				</div>
