changed routing names, 'ranking' to 'rank', added link

--- a/app/views/media/_show_movies.html.erb
+++ b/app/views/media/_show_movies.html.erb
@@ -1,30 +1,32 @@
 <span class="column">
-	<h1>Movies!</h1>
+	<a href="/movies"><h1>Movies!</h1></a>
 	<div class="row">		
 		<% @movies.each do |movie| %>
 			<article class="column">
 				<div class="card">
-					<p>Ranking: <%= movie.votes.count %> </p>
-					<p><%= link_to(movie.title, show_media_path(movie.id)) %></p>
+					<p>Rank: <%= movie.votes.count %> </p>
+					<p><%= link_to(movie.title, show_path(movie.id)) %></p>
 					<p>By: <%=movie.maker %></p>
 <!-- <p>Description: <%= movie.description %></p> -->
 <!-- voting buttons				 -->
+					<span class="buttons">
 					<ul class="row small-up-1 medium-up-2">
 						<li class="column">
-							<%= button_to("Upvote", upvote_media_path(movie.id)) %>
+							<%= link_to(image_tag("/assets/upvote_cupid_dart_heart.png"), image_path(upvote_path(movie.id)), action: :upvote, method: :post) %>
 						</li>
 						<li class="column">
-							<%= button_to("Downvote", downvote_media_path(movie.id)) %>
+							<%= link_to(image_tag("/assets/downvote_broken_heart.png"), image_path(downvote_path(movie.id)), method: :post, action: :downvote) %>
 						</li>
 						<!-- edit button -->
 						<li class="column">
-							<%= button_to("Edit", edit_media_path(movie.id), method: :get, action: :edit) %>
+							<%= button_to("Edit", edit_path(movie.id), method: :get, action: :edit) %>
 						</li>	
 						<!-- delete buttons -->	
 						<li class="column">
-							<%= button_to("Delete", delete_media_path(movie.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+							<%= button_to("Delete", delete_path(movie.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
 						</li>
 					</ul>
+					</span>
 				</div>
 			</article>
 		<% end %>
