--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
 <body>
 	<header class="set-header">
 		<nav>
-    	<ul class="row small-up-1 medium-up-2">
-      	<li class="column">
+    	<ul class="row">
+      	<li class="small-3 columns">
         	<a href="/">
 					<img src="/assets/totorochu_pikatoro.png" class="set-header">
 					</a>
 				</li>
-				<li class="column">
-					<h1 class="set-header">Pikatoro and Totorochu's Favorite Favs</h1>
+				<li class="small-9 columns">
+					<h1 class="set-header">PIKATORO + TOTOROCHU: Favorite Favs</h1>
 				</li>
 			</ul>
 		</nav>
