--- a/app/views/media/_show_books.html.erb
+++ b/app/views/media/_show_books.html.erb
@@ -1,4 +1,4 @@
-<span class="column">
+<div class="column">
 
 	<div class="row">
 		<header class="column">
@@ -9,38 +9,44 @@
 
 			<article class="column">
 	       <div class="card">
-	       	<ul>
-						<li>
-							Rank: <%= book.votes.count %> 
-						</li>
-						<li>
-							<%= link_to(book.title, show_path(book.id)) %>
-						</li>
-						<li>
-						By: <%=book.maker %>
-						</li>
-			<!-- <li>Description: <%= book.description %></li> -->
-<!-- voting buttons				 -->
-					</ul>
-					<ul class="row small-up-1 medium-up-2">
-						<li class="column">
-							<%= button_to("Upvote", upvote_path(book.id)) %>
-						</li>
-						<li class="column">
-							<%= button_to("Downvote", downvote_path(book.id)) %>
-						</li>
-<!-- edit button -->
-						<li class="column">
-							<%= button_to("Edit", edit_path(book.id), method: :get, action: :edit) %>
-						</li>	
-<!-- delete buttons -->	
-						<li class="column">
-							<%= button_to("Delete", delete_path(book.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %>
-						</li>
-					</ul>
+	       	<div class="media-info">
+		       	<ul>
+							<li>
+								Rank: <%= book.votes.count %> 
+							</li>
+							<li>
+								<%= link_to(book.title, show_path(book.id)) %>
+							</li>
+							<li>
+							By: <%=book.maker %>
+							</li>
+				<!-- <li>Description: <%= book.description %></li> -->
+	<!-- voting buttons				 -->
+						</ul>
+						</div>
+					<br class="clear-card">
+					<div class="buttons">
+						<ul class="row small-up-2 medium-up-4">
+							<li class="column">
+								<%= link_to(image_tag("/assets/upvote_cupid_dart_heart.png"), image_path(upvote_path(book.id)), action: :upvote, method: :post) %>
+							</li>
+							<!-- edit button -->
+							<li class="column">
+								<%= link_to(image_tag("/assets/edit_pencil.png"), image_path(edit_path(book.id)), method: :get, action: :edit) %>
+							</li>	
+							<!-- delete buttons -->	
+							<li class="column">
+								<%= link_to(image_tag("/assets/delete_recycle.png"), image_path(delete_path(book.id)), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %>
+							</li>
+							<li class="column">
+								<%= link_to(image_tag("/assets/downvote_broken_heart.png"), image_path(downvote_path(book.id)), method: :post, action: :downvote) %>
+							</li>
+						</ul>
+					</div>
+					<br class="clear-card">
 				</div>
 			</article>
 		<% end %>
 	</div>
-	<%= button_to("New Book", media_new_path, action: :get) %>
-</span>
+	<%= button_to("New Book", media_new_path, method: :get, action: :new) %>
+</div>
