--- a/app/views/media/edit.html.erb
+++ b/app/views/media/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Edit <%=@my_medium.title%></h1>
+<div class='row'>
+	<div class='column'>
+		<h1>Edit <%=@my_medium.title%></h1>
 
-<%= render partial: 'media_form' %>
+		<%= render partial: 'media_form' %>
+	</div>
+</div>
