--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,18 +20,26 @@ header.set-header {
 }
 
 img.set-header  {
-	width: 55%;
+	width: 100%;
 	vertical-align: middle;
-	/*margin-left: 0;*/
+	margin-left: 0;
+}
+
+.set-header ul {
+	list-style: none;
+	font-size: 1.5rem;
 }
 
 h1.set-header {
-	font-size: 2rem;
 	font-family: verdana;
+	margin-top: .2em;
+	margin-bottom: .2em
 }
 
-.albums {
-
+.column a h1 {
+	margin-top: .2em;
+	margin-bottom: .2em;
+	margin: .2em 0 .05em .2em;
 }
 
 h1 {
@@ -42,25 +50,41 @@ h1 {
   display: block;
   margin: 1%;
   padding: 2%;
+  padding-left: 3.5%;
   /*background-color: #119fc2;*/
   /*color: white;*/
   border: solid black;
-  height: 13em;
+  min-height: 10em;
 }
 
-ul {
+.clear-card {
+	clear:both;
+}
+div.media-info {
+	min-height: 6.5em;
+	/*border: solid red;*/
+	/*padding: 0;*/
+}
+
+.media-info ul, .buttons ul {
 	list-style: none;
+	margin-left: 0;
+	margin-bottom: .25em;
+	font-size: 1rem;
 }
 
-.column li {
-	/*margin: 2px;*/
+
+div.buttons {
+	min-height: 2em;
+	padding-top: .25em;
+	/*padding-right: .05em;*/
+	/*border: solid black;*/
 }
 
-span.buttons img {
-	height: 3em;
-
+div.buttons img {
+	max-height: 2rem;
 }
 
 .buttons img:nth-child(2) {
-	height: 1em;
+	max-height: 1rem;
 }
