--- a/app/views/media/_media_form.html.erb
+++ b/app/views/media/_media_form.html.erb
@@ -10,5 +10,5 @@ url: @post_path do |f| %>
 	<%= f.label :description %>
 	<%= f.text_area :description %>
 
-	<%= f.submit %>
+	<%= f.submit "Submit"%>
 <% end %>
