--- a/app/views/media/_show_albums.html.erb
+++ b/app/views/media/_show_albums.html.erb
@@ -1,4 +1,4 @@
-<span class="column">
+<div class="column">
 
 	<div class="row">
 		<header class="column">
@@ -9,41 +9,47 @@
 
 			<article class="column">
 				<div class="card">
+					<div class="media-info"
 <!-- item info -->
-					<ul>
-						<li>
-							Rank: <%= album.votes.count %> 
-						</li>
-						<li>
-							<%= link_to(album.title, show_path(album.id)) %>
-							
-						</li>
-						<li>
-							By: <%=album.maker %>
-						</li>
-						<!-- <li>Description: <%= album.description %>
-						</li> -->
-<!-- voting buttons				 -->
-					</ul>
-					<ul class="row small-up-1 medium-up-2 large-up-6">
-						<li class="column">
-							<%= button_to("Upvote", upvote_path(album.id)) %>
-						</li>
-						<li class="column">
-							<%= button_to("Downvote", downvote_path(album.id)) %>
-						</li>
-<!-- edit button -->
-						<li class="column">
-							<%= button_to("Edit", edit_path(album.id), method: :get, action: :edit) %>
-						</li>	
-<!-- delete buttons -->	
-						<li class="column">
-							<%= button_to("Delete", delete_path(album.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
-						</li>
-					</ul>
+						<ul>
+							<li>
+								Rank: <%= album.votes.count %> 
+							</li>
+							<li>
+								<%= link_to(album.title, show_path(album.id)) %>
+								
+							</li>
+							<li>
+								By: <%=album.maker %>
+							</li>
+							<!-- <li>Description: <%= album.description %>
+							</li> -->
+	<!-- voting buttons				 -->
+						</ul>
+					</div>
+					<br class="clear-card">
+					<div class="buttons">
+						<ul class="row small-up-2 medium-up-4">
+							<li class="column">
+								<%= link_to(image_tag("/assets/upvote_cupid_dart_heart.png"), image_path(upvote_path(album.id)), action: :upvote, method: :post) %>
+							</li>
+							<!-- edit button -->
+							<li class="column">
+								<%= link_to(image_tag("/assets/edit_pencil.png"), image_path(edit_path(album.id)), method: :get, action: :edit) %>
+							</li>
+							<!-- delete buttons -->	
+							<li class="column">
+								<%= link_to(image_tag("/assets/delete_recycle.png"), image_path(delete_path(album.id)), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+							</li>
+							<li class="column">
+								<%= link_to(image_tag("/assets/downvote_broken_heart.png"), image_path(downvote_path(album.id)), method: :post, action: :downvote) %>
+							</li>
+						</ul>
+					</div>
+					<br class="clear-card">
 				</div>
 			</article>
 		<% end %>
 	</div>
-	<%= button_to("New Album", media_new_path, action: :get) %>
-</span>
+	<%= button_to("New Album", media_new_path, action: :new, method: :get) %>
+</div>
