--- a/app/views/media/_show_albums.html.erb
+++ b/app/views/media/_show_albums.html.erb
@@ -39,7 +39,7 @@
 							</li>
 							<!-- delete buttons -->	
 							<li class="column">
-								<%= link_to(image_tag("/assets/delete_recycle.png"), image_path(delete_path(album.id)), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+								<%= link_to(image_tag("/assets/delete_recycle.png"), image_path(delete_path(album.id)), method: :delete, action: :destroy, data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
 							</li>
 							<li class="column">
 								<%= link_to(image_tag("/assets/downvote_broken_heart.png"), image_path(downvote_path(album.id)), method: :post, action: :downvote) %>
@@ -51,5 +51,7 @@
 			</article>
 		<% end %>
 	</div>
-	<%= button_to("New Album", media_new_path, action: :new, method: :get) %>
+	<div class="add-buttons">
+	<%= link_to(image_tag("/assets/add_album.png"), image_path(new_path(kind: 'album')), action: :new, method: :get) %>
+	</div>
 </div>
