--- a/app/views/media/edit.html.erb
+++ b/app/views/media/edit.html.erb
@@ -1,6 +1,6 @@
 <div class='row'>
 	<div class='column'>
-		<h1>Edit <%=@my_medium.title%></h1>
+		<h1>Edit <%= @my_medium.kind.capitalize %>: <%=@my_medium.title%></h1>
 
 		<%= render partial: 'media_form' %>
 	</div>
