changed header, fixed typo in render partial

--- a/app/views/media/new.html.erb
+++ b/app/views/media/new.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
 	<div class='column'>
-		<h1>Add a New Medium</h1>
+		<h1>Add Some New Art!</h1>
 
-		<render partial: 'media_form' %>
+		<%=render partial: 'media_form' %>
 	</div>
 </div>
