--- a/app/views/media/_media_form.html.erb
+++ b/app/views/media/_media_form.html.erb
@@ -12,5 +12,5 @@
 	<%= f.label :description %>
 	<%= f.text_area :description %>
 
-	<%= f.submit "Add New Art" %>
+	<%= f.submit "Submit Art" %>
 <% end %>
