--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -1,39 +1,44 @@
 <article class="column">
 	<h1>This One Medium</h1>
-		<ul>
-		<li>Rank: <%= @my_medium.votes.count %> </li>
-		<li>Name: <%= @my_medium.title %></li>
-		<li>Maker: <%= @my_medium.maker %></li>
-		</ul>
-		<p>Description: <%= @my_medium.description %></p>
+		
+	<div class="card">
+		<div class="media-info"
+<!-- item info -->
+			<ul>
+				<li>
+					Rank: <%= @my_medium.votes.count %> 
+				</li>
+				<li>
+					<%= link_to(@my_medium.title, show_path(@my_medium.id)) %>
+					
+				</li>
+				<li>
+					By: <%=@my_medium.maker %>
+				</li>
+				<li>Description: <%= @my_medium.description %>
+				</li> 
+<!-- voting buttons				 -->
+			</ul>
+		</div>
+		<div class="buttons">
+			<ul class="row small-up-2 medium-up-4">
+				<li class="column">
+					<%= link_to(image_tag("/assets/upvote_cupid_dart_heart.png"), image_path(upvote_path(@my_medium.id)), action: :upvote, method: :post) %>
+				</li>
+				<!-- edit button -->
+				<li class="column">
+					<%= link_to(image_tag("/assets/edit_pencil.png"), image_path(edit_path(@my_medium.id)), method: :get, action: :edit) %>
+				</li>
+				<!-- delete buttons -->	
+				<li class="column">
+					<%= link_to(image_tag("/assets/delete_recycle.png"), image_path(delete_path(@my_medium.id)), method: :delete, action: :destroy, data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %>
+				</li>
+				<li class="column">
+					<%= link_to(image_tag("/assets/downvote_broken_heart.png"), image_path(downvote_path(@my_medium.id)), method: :post, action: :downvote) %>
+				</li>
+			</ul>
+		</div>
+	</div>
 
-		<ul class="row small-up-1 medium-up-4 large-up-6">
-			<li class="column">
-				<%= button_to("Upvote", upvote_path(@my_medium.id)) %>
-			</li>
-			<li class="column"><%= button_to("Downvote", downvote_path(@my_medium.id)) %></li>
-
-		<!-- edit buttons -->
-		<% if @my_medium.kind == 'album' %>
-			<li class="column"><%= button_to("Edit Medium", edit_path(@my_medium.id), method: :get, action: :edit) %></li>
-		<% elsif %>
-			<% @my_medium.kind == 'book' %>
-			<li class="column"><%= button_to("Edit Book", edit_path(@my_medium.id), method: :get, action: :edit) %></li>			
-		<%else %>
-			<% @my_medium.kind == 'movie' %>
-			<li class="column"><%= button_to("Edit Movie", edit_path(@my_medium.id), method: :get, action: :edit) %></li>	
-		<% end %>
-
-
-		<!-- delete buttons -->
-		<% if @my_medium.kind == 'album' %>		
-		<li class="column"><%= button_to("Delete Album", delete_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful music?"}) %></li>
-		<% elsif %>
-			<% @my_medium.kind == 'book' %>
-		<li class="column"><%= button_to("Delete Book", delete_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful writing?"}) %></li>
-		<%else %>
-			<% @my_medium.kind == 'movie' %>						
-		<li class="column"><%= button_to("Delete Movie", delete_path(@my_medium.id), data: {confirm: "Are you sure you want to destroy this beautiful example of cinematography?"}) %></li>
-	<% end %>
 
 </article>
